[package]
name = "greeks"
version = "0.0.1"

description = "Implementation of library to calculate options greeks"
repository = "https://github.com/wateryan/greeks"
license = "MIT"
readme = "README.md"

[lib]
name = "greeks"
path = "src/lib.rs"

[[example]]
name = "delta" # examples/delta.rs

[[example]]
name = "squeeth" # examples/squeeth.rs

[[example]]
name = "concentrated_liquidity" # examples/concentrated_liquidity.rs

[features]
unstable = []