[package]
name = "defi_greeks"
version = "0.0.1"

description = "Library to calculate greeks for an option, power perpetual, or concentrated liquidity share"
repository = "https://github.com/0xperp/new_age_greeks"
license = "MIT"
readme = "README.md"

[lib]
name = "greeks"
path = "src/lib.rs"

[[example]]
name = "delta" # examples/delta.rs

[[example]]
name = "squeeth" # examples/squeeth.rs

[[example]]
name = "concentrated_liquidity" # examples/concentrated_liquidity.rs

[features]
unstable = []